# qwe

./: pyproject.toml
.github/workflows/: ci.yml  s.yml
src/: dependencies.py  main.py
src/api/: __init__.py  chess.py
src/core/: config.py
src/core/entities/: AbstractPlayerSession.py  GameRoom.py  WebsocketPlayerSession.py
src/core/entities/GameRoom/: AbstractGameRoom.py  GameRoom.py
src/core/entities/PlayerSession/: AbstractPlayerSession.py  WebsocketPlayerSession.py
src/core/factories/: AbstractGameRoomFactory.py  AbstractPlayerSessionFactory.py  GameRoomFactory.py  WebsocketPlayerSessionFactory.py
src/core/handlers/: ConnectionRequestHandler.py  MessageHandler.py  RoomInitRequestHandler.py
src/core/repository/RoomRepository/: AbstractRoomRepository.py  RAMRoomRepository.py
src/core/schemas/: Player.py  Room.py  RoomConnectionRequest.py  RoomConnectionResponce.py  RoomConnectionResponse.py  RoomInitRequest.py  RoomInitResponce.py  RoomInitResponse.py
src/core/schemas/mixins/: ErrorsMixin.py  ExternalDataMixin.py  JsonTypeStrMixin.py  SystemMessageMixin.py
src/core/services/: MessageHandlerService.py  RoomService.py
tests/integration/: test_connection_to_room.py  test_create_room.py
tests/integration_tests/: test_connection_to_room.py  test_create_room.py
tests/unit/: test_chess_game_processor.py  test_room_init_request_handler.py  test_room_service.py  test_websocket_player_session.py
tests/unit_tests/: test_room_init_request_handler.py  test_room_service.py  test_websocket_player_session.py
